[tool.poetry]
name = "wagtail-response-checker"
version = "0.1.0"
description = "Check wagtail admin and frontend responses"
authors = ["Nick Moreton <nickmoreton@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
wagtail = "3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
